--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,9 @@ jobs:
           args: --release --target x86_64-pc-windows-gnu  
       - name: Compress Executable  
         run: |  
+          TAG=${GITHUB_REF#refs/tags/}
           cd target/x86_64-pc-windows-gnu/release/  
-          zip -r ../../../macjson-x86_64-windows-gnu.zip *.exe  
+          zip -r ../../../macjson-x86_64-windows-gnu-${GITHUB_REF#refs/tags/}.zip *.exe  
       - name: Upload Artifact  
         uses: actions/upload-artifact@v2  
         with:  
@@ -40,4 +41,4 @@ jobs:
         env:  
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         with:  
-          files: macjson-x86_64-windows-gnu.zip
+          files: macjson-x86_64-windows-gnu-${GITHUB_REF#refs/tags/}.zip
