--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,13 @@ jobs:
           args: --release --target x86_64-pc-windows-gnu  
       - name: Compress Executable  
         run: |  
-          TAG=${GITHUB_REF#refs/tags/}
           cd target/x86_64-pc-windows-gnu/release/  
-          zip -r ../../../macjson-x86_64-windows-gnu-${GITHUB_REF#refs/tags/}.zip *.exe  
+          zip -r ../../../macjson-x86_64-windows-gnu.zip *.exe  
       - name: Upload Artifact  
         uses: actions/upload-artifact@v2  
         with:  
           name: rust-binary-windows-gnu  
-          path: rust-binary-windows-gnu.zip  
+          path: macjson-x86_64-windows-gnu.zip  
       - name: Upload Release Asset  
         id: upload-release-asset  
         uses: softprops/action-gh-release@v1  
@@ -41,4 +40,4 @@ jobs:
         env:  
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         with:  
-          files: macjson-x86_64-windows-gnu-${GITHUB_REF#refs/tags/}.zip
+          files: macjson-x86_64-windows-gnu.zip
