--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }  
 serde_json = "1.0"
-simple_redis = "0.6.3"
+redis = "0.25.3"
 clap = "2.33"
+indicatif = "0.17.8"
 
 [profile.release]
 strip = true 
