--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ indicatif = "0.17.8"
 
 [profile.release]
 strip = true 
-opt-level = "z"
+opt-level = 3
 lto = true
 [target.x86_64-pc-windows-gun]
 rustflags = ["-C", "target-feature=+crt-static"]
