--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,9 @@ redis = "0.25.3"
 strip = true 
 opt-level = 3
 lto = true
-[target.x86_64-pc-windows-gun]
+
+[target.'cfg(target_os = "linux")']
+rustflags = ["-C", "target-feature=+crt-static"]
+ 
+[target.'cfg(target_os = "windows")']
 rustflags = ["-C", "target-feature=+crt-static"]
