--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,22 +13,22 @@ jobs:
           - release_for: FreeBSD-x86_64
             os: ubuntu-20.04
             target: x86_64-unknown-freebsd
-            bin: precious
-            name: precious-FreeBSD-x86_64.tar.gz
+            bin: macjson
+            name: macjson-FreeBSD-x86_64.tar.gz
             command: build
 
           - release_for: Windows-x86_64
             os: windows-latest
             target: x86_64-pc-windows-msvc
-            bin: precious.exe
-            name: precious-Windows-x86_64.zip
+            bin: macjson.exe
+            name: macjson-Windows-x86_64.zip
             command: both
 
           - release_for: macOS-x86_64
             os: macOS-latest
             target: x86_64-apple-darwin
-            bin: precious
-            name: precious-Darwin-x86_64.tar.gz
+            bin: macjson
+            name: macjson-Darwin-x86_64.tar.gz
             command: both
 
             # more release targets here ...
