--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ permissions:
 
 
 on:
-  push:
-    tags: [ "v[0-9]+.*" ]
+  release:
+    types: [created]
 
 env:
   CARGO_TERM_COLOR: always
@@ -17,24 +17,6 @@ defaults:
     shell: bash
 
 jobs:
-  create-release:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v4
-      - uses: taiki-e/create-gh-release-action@v1
-        with:
-          branch: main
-          # (Optional)
-          changelog: CHANGELOG.md
-          # (Optional) Format of title.
-          # [default value: $tag]
-          # [possible values: variables $tag, $version, and any string]
-          # title: $version
-          # (Required) GitHub token for creating GitHub Releases.
-          token: ${{ secrets.GITHUB_TOKEN }}
-
   upload-assets:
     needs: create-release
     strategy:
