--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Release
+name: Build and upload release
 
 on:
   release:
@@ -6,64 +6,22 @@ on:
 
 jobs:
   build:
-    name: Build
+    name: Build for ${{ matrix.target }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [x86_64-apple-darwin, x86_64-unknown-linux-gnu, x86_64-pc-windows-gnu]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: x86_64-apple-darwin
-          override: true
-
-      - name: Build for macOS
-        run: cargo build --release --target x86_64-apple-darwin
-
-      - name: Build for Linux
-        run: cargo build --release --target x86_64-unknown-linux-gnu
-
-      - name: Build for Windows
-        run: cargo build --release --target x86_64-pc-windows-gnu
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: macjson-binaries
-          path: |
-            target/x86_64-apple-darwin/release/macjson
-            target/x86_64-unknown-linux-gnu/release/macjson
-            target/x86_64-pc-windows-gnu/release/macjson.exe
-
-  release:
-    name: Release
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: macjson-binaries
-          path: macjson-binaries
-
-      - name: Create release
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: macjson-binaries/*
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Install zig
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y zig
+    - name: Build binary
+      run: zig build-exe -Dtarget=${{ matrix.target }} macjson.zig -lcurl
+    - name: Upload binary
+      uses: actions/upload-artifact@v2
+      with:
+        name: macjson-${{ matrix.target }}
+        path: macjson
