--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
             build-tool: cargo-zigbuild
           - target: x86_64-pc-windows-gun
             os: windows-latest
-            build-tool: cargo-zigbuild
+            build-tool: cross
 
     runs-on: ${{ matrix.os }}
     steps:
