--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,22 +24,16 @@ jobs:
         include:
           - target: aarch64-unknown-linux-musl
             os: ubuntu-latest
-            build-tool: cargo-zigbuild
           - target: aarch64-apple-darwin
             os: macos-latest
-            build-tool: cargo-zigbuild
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
-            build-tool: cargo-zigbuild
           - target: x86_64-apple-darwin
             os: macos-latest
-            build-tool: cargo-zigbuild
           - target: universal-apple-darwin
             os: macos-latest
-            build-tool: cargo-zigbuild
-          - target: x86_64-pc-windows-gun
+          - target: x86_64-pc-windows-msvc
             os: windows-latest
-            build-tool: cross
 
     runs-on: ${{ matrix.os }}
     steps:
