--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,13 +34,20 @@ jobs:
             os: macos-latest
           - target: x86_64-pc-windows-msvc
             os: windows-latest
+          - target: x86_64-pc-windows-gun
+            os: windows-latest
+            build-tool: cross
          
     runs-on: ${{ matrix.os }}
     steps:
+      - name: add x86_64-pc-windows-gun
+        run: |
+          rustup target add x86_64-pc-windows-gnu
       - uses: actions/checkout@v4
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
           bin: macjson
           target: ${{ matrix.target }}
+          build-tool: ${{ matrix.build-tool }}
           archive: $bin-$tag-$target
           token: ${{ secrets.GITHUB_TOKEN }}
