--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           - target: universal-apple-darwin
             os: macos-latest
           - target: x86_64-pc-windows-gnu
-            os: ubuntu-latest
+            os: windows-latest
             build-tool: cross
          
     runs-on: ${{ matrix.os }}
